➕Add instructions and the initial message image

--- a/index.html
+++ b/index.html
@@ -7,7 +7,14 @@
     <title>Flappy Bird</title>
 </head>
 <body>
-    <h1>Click to start</h1>
+    <div class="instructions">
+        <h2>Instructions</h2>
+        <ol>
+            <li>Press 'S' to start the game</li>
+            <li>Press 'Space Bar' to make flappy fly</li>
+            <li>Don't collide in the pipes</li>
+        </ol>
+    </div>
     <canvas id="canvas"></canvas>
     <script src="./js/sprites.js"></script>
     <script src="./js/classes.js"></script>
