🧹Code cleanup and add gameStates, start, pause and restart

--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
         <ol>
             <li>Press 'S' to start the game</li>
             <li>Press 'Space Bar' to make flappy fly</li>
+            <li>Press 'P' to pause the game</li>
+            <li>Press 'S' again to restart after pausing the game</li>
             <li>Don't collide in the pipes</li>
         </ol>
     </div>
@@ -19,6 +21,7 @@
     <script src="./js/sprites.js"></script>
     <script src="./js/classes.js"></script>
     <script src="./js/functions.js"></script>
+    <script src="./js/game.js"></script>
     <script src="./js/index.js"></script>
 </body>
 </html>
