🎵Add audio in game

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     </div>
     <canvas id="canvas"></canvas>
     <script src="./js/sprites.js"></script>
+    <script src="./js/audios.js"></script>
     <script src="./js/classes.js"></script>
     <script src="./js/functions.js"></script>
     <script src="./js/game.js"></script>
