➕Add highscore feature

--- a/index.html
+++ b/index.html
@@ -17,6 +17,10 @@
             <li>Press 'S' again to restart after pausing the game</li>
             <li>Don't collide in the pipes</li>
         </ol>
+
+        <div class="highscore">
+            Highscore = 0
+        </div>
     </div>
     <canvas id="canvas"></canvas>
     <script src="./js/sprites.js"></script>
