--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="instructions">
         <h2>Instructions</h2>
         <ol>
-            <li>Press 'S' to start the game</li>
+            <li>Press 'S' or 'Space' to start the game</li>
             <li>Press 'Space Bar' to make flappy fly</li>
             <li>Press 'P' to pause the game</li>
             <li>Press 'S' again to restart after pausing the game</li>
