➕Add increased speed after certain scores and change the font of the instruction and also add instruction

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <h2>Instructions</h2>
         <ol>
             <li>Press 'S' or 'Space' to start the game</li>
+            <li>Press 'R' to go to the main screen</li>
             <li>Press 'Space Bar' to make flappy fly</li>
             <li>Press 'P' to pause the game</li>
             <li>Press 'S' again to restart after pausing the game</li>
