--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.cdnfonts.com/css/common-pixel" rel="stylesheet">
+    <link rel="icon" type="image/x-icon" href="/assets/images/bluebird-midflap.png">
     <link rel="stylesheet" href="./css/style.css">
     <title>Flappy Bird</title>
 </head>
@@ -24,6 +25,7 @@
         </div>
     </div>
     <canvas id="canvas"></canvas>
+    <canvas id="canvas-2"></canvas>
     <script src="./js/sprites.js"></script>
     <script src="./js/audios.js"></script>
     <script src="./js/classes.js"></script>
