➕Add continue on space bar press

--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
     <div class="instructions">
         <h2>Instructions</h2>
         <ol>
-            <li>Press 'S' or 'Space' to start the game</li>
+            <li>Press 'S' or 'Space Bar' to start the game</li>
             <li>Press 'R' to go to the main screen</li>
             <li>Press 'Space Bar' to make flappy fly</li>
             <li>Press 'P' to pause the game</li>
-            <li>Press 'S' again to restart after pausing the game</li>
+            <li>Press 'S' or 'Space Bar' again to restart after pausing the game</li>
             <li>Don't collide in the pipes</li>
         </ol>
 
