➕Add mobile responsiveness

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
     </div>
     <canvas id="canvas"></canvas>
     <canvas id="canvas-2"></canvas>
+    <script src="./js/canvasContext.js"></script>
     <script src="./js/sprites.js"></script>
     <script src="./js/audios.js"></script>
     <script src="./js/classes.js"></script>
