--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/x-icon" href="./favicon.ico">
     <link href="https://fonts.cdnfonts.com/css/common-pixel" rel="stylesheet">
-    <link rel="icon" type="image/x-icon" href="/assets/images/bluebird-midflap.png">
     <link rel="stylesheet" href="./css/style.css">
     <title>Flappy Bird</title>
 </head>
